// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`file/file/memory connector > 1-depth > 2-way > connected > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`file/file/memory connector > 1-depth > 2-way > connected > equivalent 2`] = `
{
  "a": "B",
}
`;

exports[`file/file/memory connector > 1-depth > 2-way > connected, deletion > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`file/file/memory connector > 1-depth > 2-way > connected, deletion > equivalent 2`] = `{}`;

exports[`file/file/memory connector > 1-depth > 2-way > connected, initial > equivalent 1`] = `{}`;

exports[`file/file/memory connector > 1-depth > 2-way > connected, near atom > equivalent 1`] = `
{
  "a": "A",
  "b": "B",
}
`;

exports[`file/file/memory connector > 1-depth > 2-way > disconnected, conflicting values > equivalent 1`] = `
{
  "a": "B",
}
`;

exports[`file/file/memory connector > 1-depth > 2-way > disconnected, near atom > equivalent 1`] = `
{
  "a": "A",
  "b": "B",
}
`;

exports[`file/file/memory connector > 1-depth > 2-way > set 1, set 2, start 2, start 1 > differing 1`] = `
[
  {
    "a": "A",
  },
  {},
]
`;

exports[`file/file/memory connector > 1-depth > 2-way > set 1, set 2, start 2, start 1 > differing 2`] = `
[
  {
    "a": "A",
  },
  {
    "a": "B",
  },
]
`;

exports[`file/file/memory connector > 1-depth > 2-way > set 1, set 2, start 2, start 1 > equivalent 1`] = `
{
  "a": "B",
}
`;

exports[`file/file/memory connector > 1-depth > 2-way > start 1, set 1, start 2 > differing 1`] = `
[
  {
    "a": "A",
  },
  {},
]
`;

exports[`file/file/memory connector > 1-depth > 2-way > start 1, set 1, start 2 > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`file/file/memory connector > 1-depth > 2-way > start 2, set 1, start 1 > differing 1`] = `
[
  {
    "a": "A",
  },
  {},
]
`;

exports[`file/file/memory connector > 1-depth > 2-way > start 2, set 1, start 1 > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`file/file/memory connector > 1-depth > 2-way > stop 1, set 1, start 1 > differing 1`] = `
[
  {
    "a": "B",
  },
  {
    "a": "A",
  },
]
`;

exports[`file/file/memory connector > 1-depth > 2-way > stop 1, set 1, start 1 > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`file/file/memory connector > 1-depth > 2-way > stop 1, set 1, start 1 > equivalent 2`] = `
{
  "a": "B",
}
`;

exports[`file/file/memory connector > 1-depth > 2-way > stop 1, set 2, start 1 > differing 1`] = `
[
  {
    "a": "A",
  },
  {
    "a": "B",
  },
]
`;

exports[`file/file/memory connector > 1-depth > 2-way > stop 1, set 2, start 1 > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`file/file/memory connector > 1-depth > 2-way > stop 1, set 2, start 1 > equivalent 2`] = `
{
  "a": "B",
}
`;

exports[`file/file/memory connector > 1-depth > 3-way > chain > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`file/file/memory connector > 1-depth > 3-way > chain > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`file/file/memory connector > 1-depth > 3-way > chain > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`file/file/memory connector > 1-depth > 3-way > pool > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`file/file/memory connector > 1-depth > 3-way > pool > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`file/file/memory connector > 1-depth > 3-way > pool > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`file/file/memory connector > 1-depth > 3-way > ring > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`file/file/memory connector > 1-depth > 3-way > ring > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`file/file/memory connector > 1-depth > 3-way > ring > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > chain > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > chain > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > chain > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > chain > equivalent 4`] = `
{
  "a": "A4",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > chain > equivalent 5`] = `
{
  "a": "A5",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > chain > equivalent 6`] = `
{
  "a": "A6",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > chain > equivalent 7`] = `
{
  "a": "A7",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > chain > equivalent 8`] = `
{
  "a": "A8",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > chain > equivalent 9`] = `
{
  "a": "A9",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > chain > equivalent 10`] = `
{
  "a": "A10",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > pool > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > pool > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > pool > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > pool > equivalent 4`] = `
{
  "a": "A4",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > pool > equivalent 5`] = `
{
  "a": "A5",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > pool > equivalent 6`] = `
{
  "a": "A6",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > pool > equivalent 7`] = `
{
  "a": "A7",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > pool > equivalent 8`] = `
{
  "a": "A8",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > pool > equivalent 9`] = `
{
  "a": "A9",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > pool > equivalent 10`] = `
{
  "a": "A10",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > ring > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > ring > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > ring > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > ring > equivalent 4`] = `
{
  "a": "A4",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > ring > equivalent 5`] = `
{
  "a": "A5",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > ring > equivalent 6`] = `
{
  "a": "A6",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > ring > equivalent 7`] = `
{
  "a": "A7",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > ring > equivalent 8`] = `
{
  "a": "A8",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > ring > equivalent 9`] = `
{
  "a": "A9",
}
`;

exports[`file/file/memory connector > 1-depth > 10-way > ring > equivalent 10`] = `
{
  "a": "A10",
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > connected > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > connected > equivalent 2`] = `
{
  "a": {
    "aa": "B",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > connected, deletion > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > connected, deletion > equivalent 2`] = `{}`;

exports[`file/file/memory connector > 2-depth > 2-way > connected, far atom > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
  "b": {
    "ba": "B",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > connected, initial > equivalent 1`] = `{}`;

exports[`file/file/memory connector > 2-depth > 2-way > connected, near atom > equivalent 1`] = `
{
  "a": {
    "aa": "A",
    "ab": "B",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > disconnected, conflicting values > equivalent 1`] = `
{
  "a": {
    "aa": "B",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > disconnected, conflicting values 2 > equivalent 1`] = `
{
  "a": {
    "aa": "A",
    "ab": "C",
  },
  "b": {
    "ba": "D",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > disconnected, far atom > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
  "b": {
    "ba": "B",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > disconnected, near atom > equivalent 1`] = `
{
  "a": {
    "aa": "A",
    "ab": "B",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > set 1, set 2, start 2, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": "A",
    },
  },
  {},
]
`;

exports[`file/file/memory connector > 2-depth > 2-way > set 1, set 2, start 2, start 1 > differing 2`] = `
[
  {
    "a": {
      "aa": "A",
    },
  },
  {
    "a": {
      "aa": "B",
    },
  },
]
`;

exports[`file/file/memory connector > 2-depth > 2-way > set 1, set 2, start 2, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": "B",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > start 1, set 1, start 2 > differing 1`] = `
[
  {
    "a": {
      "aa": "A",
    },
  },
  {},
]
`;

exports[`file/file/memory connector > 2-depth > 2-way > start 1, set 1, start 2 > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > start 2, set 1, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": "A",
    },
  },
  {},
]
`;

exports[`file/file/memory connector > 2-depth > 2-way > start 2, set 1, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > stop 1, set 1, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": "B",
    },
  },
  {
    "a": {
      "aa": "A",
    },
  },
]
`;

exports[`file/file/memory connector > 2-depth > 2-way > stop 1, set 1, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > stop 1, set 1, start 1 > equivalent 2`] = `
{
  "a": {
    "aa": "B",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > stop 1, set 2, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": "A",
    },
  },
  {
    "a": {
      "aa": "B",
    },
  },
]
`;

exports[`file/file/memory connector > 2-depth > 2-way > stop 1, set 2, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 2-way > stop 1, set 2, start 1 > equivalent 2`] = `
{
  "a": {
    "aa": "B",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 3-way > chain > equivalent 1`] = `
{
  "a": {
    "aa": "A1",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 3-way > chain > equivalent 2`] = `
{
  "a": {
    "aa": "A2",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 3-way > chain > equivalent 3`] = `
{
  "a": {
    "aa": "A3",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 3-way > pool > equivalent 1`] = `
{
  "a": {
    "aa": "A1",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 3-way > pool > equivalent 2`] = `
{
  "a": {
    "aa": "A2",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 3-way > pool > equivalent 3`] = `
{
  "a": {
    "aa": "A3",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 3-way > ring > equivalent 1`] = `
{
  "a": {
    "aa": "A1",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 3-way > ring > equivalent 2`] = `
{
  "a": {
    "aa": "A2",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 3-way > ring > equivalent 3`] = `
{
  "a": {
    "aa": "A3",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > chain > equivalent 1`] = `
{
  "a": {
    "aa": "A1",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > chain > equivalent 2`] = `
{
  "a": {
    "aa": "A2",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > chain > equivalent 3`] = `
{
  "a": {
    "aa": "A3",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > chain > equivalent 4`] = `
{
  "a": {
    "aa": "A4",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > chain > equivalent 5`] = `
{
  "a": {
    "aa": "A5",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > chain > equivalent 6`] = `
{
  "a": {
    "aa": "A6",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > chain > equivalent 7`] = `
{
  "a": {
    "aa": "A7",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > chain > equivalent 8`] = `
{
  "a": {
    "aa": "A8",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > chain > equivalent 9`] = `
{
  "a": {
    "aa": "A9",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > chain > equivalent 10`] = `
{
  "a": {
    "aa": "A10",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > pool > equivalent 1`] = `
{
  "a": {
    "aa": "A1",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > pool > equivalent 2`] = `
{
  "a": {
    "aa": "A2",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > pool > equivalent 3`] = `
{
  "a": {
    "aa": "A3",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > pool > equivalent 4`] = `
{
  "a": {
    "aa": "A4",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > pool > equivalent 5`] = `
{
  "a": {
    "aa": "A5",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > pool > equivalent 6`] = `
{
  "a": {
    "aa": "A6",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > pool > equivalent 7`] = `
{
  "a": {
    "aa": "A7",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > pool > equivalent 8`] = `
{
  "a": {
    "aa": "A8",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > pool > equivalent 9`] = `
{
  "a": {
    "aa": "A9",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > pool > equivalent 10`] = `
{
  "a": {
    "aa": "A10",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > ring > equivalent 1`] = `
{
  "a": {
    "aa": "A1",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > ring > equivalent 2`] = `
{
  "a": {
    "aa": "A2",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > ring > equivalent 3`] = `
{
  "a": {
    "aa": "A3",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > ring > equivalent 4`] = `
{
  "a": {
    "aa": "A4",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > ring > equivalent 5`] = `
{
  "a": {
    "aa": "A5",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > ring > equivalent 6`] = `
{
  "a": {
    "aa": "A6",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > ring > equivalent 7`] = `
{
  "a": {
    "aa": "A7",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > ring > equivalent 8`] = `
{
  "a": {
    "aa": "A8",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > ring > equivalent 9`] = `
{
  "a": {
    "aa": "A9",
  },
}
`;

exports[`file/file/memory connector > 2-depth > 10-way > ring > equivalent 10`] = `
{
  "a": {
    "aa": "A10",
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > connected > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > connected > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "B",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > connected, deletion > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > connected, deletion > equivalent 2`] = `{}`;

exports[`file/file/memory connector > 3-depth > 2-way > connected, far atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
  "b": {
    "ba": {
      "baa": "B",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > connected, initial > equivalent 1`] = `{}`;

exports[`file/file/memory connector > 3-depth > 2-way > connected, near atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
      "aab": "B",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > disconnected, conflicting values > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "B",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > disconnected, conflicting values 2 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
      "aab": "C",
    },
  },
  "b": {
    "ba": {
      "baa": "D",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > disconnected, far atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
  "b": {
    "ba": {
      "baa": "B",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > disconnected, near atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
      "aab": "B",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > set 1, set 2, start 2, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": "A",
      },
    },
  },
  {},
]
`;

exports[`file/file/memory connector > 3-depth > 2-way > set 1, set 2, start 2, start 1 > differing 2`] = `
[
  {
    "a": {
      "aa": {
        "aaa": "A",
      },
    },
  },
  {
    "a": {
      "aa": {
        "aaa": "B",
      },
    },
  },
]
`;

exports[`file/file/memory connector > 3-depth > 2-way > set 1, set 2, start 2, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > start 1, set 1, start 2 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": "A",
      },
    },
  },
  {},
]
`;

exports[`file/file/memory connector > 3-depth > 2-way > start 1, set 1, start 2 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > start 2, set 1, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": "A",
      },
    },
  },
  {},
]
`;

exports[`file/file/memory connector > 3-depth > 2-way > start 2, set 1, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > stop 1, set 1, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": "B",
      },
    },
  },
  {
    "a": {
      "aa": {
        "aaa": "A",
      },
    },
  },
]
`;

exports[`file/file/memory connector > 3-depth > 2-way > stop 1, set 1, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > stop 1, set 1, start 1 > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "B",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > stop 1, set 2, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": "A",
      },
    },
  },
  {
    "a": {
      "aa": {
        "aaa": "B",
      },
    },
  },
]
`;

exports[`file/file/memory connector > 3-depth > 2-way > stop 1, set 2, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 2-way > stop 1, set 2, start 1 > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "B",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 3-way > chain > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A1",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 3-way > chain > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "A2",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 3-way > chain > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": "A3",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 3-way > pool > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A1",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 3-way > pool > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "A2",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 3-way > pool > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": "A3",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 3-way > ring > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A1",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 3-way > ring > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "A2",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 3-way > ring > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": "A3",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > chain > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A1",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > chain > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "A2",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > chain > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": "A3",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > chain > equivalent 4`] = `
{
  "a": {
    "aa": {
      "aaa": "A4",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > chain > equivalent 5`] = `
{
  "a": {
    "aa": {
      "aaa": "A5",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > chain > equivalent 6`] = `
{
  "a": {
    "aa": {
      "aaa": "A6",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > chain > equivalent 7`] = `
{
  "a": {
    "aa": {
      "aaa": "A7",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > chain > equivalent 8`] = `
{
  "a": {
    "aa": {
      "aaa": "A8",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > chain > equivalent 9`] = `
{
  "a": {
    "aa": {
      "aaa": "A9",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > chain > equivalent 10`] = `
{
  "a": {
    "aa": {
      "aaa": "A10",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > pool > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A1",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > pool > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "A2",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > pool > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": "A3",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > pool > equivalent 4`] = `
{
  "a": {
    "aa": {
      "aaa": "A4",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > pool > equivalent 5`] = `
{
  "a": {
    "aa": {
      "aaa": "A5",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > pool > equivalent 6`] = `
{
  "a": {
    "aa": {
      "aaa": "A6",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > pool > equivalent 7`] = `
{
  "a": {
    "aa": {
      "aaa": "A7",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > pool > equivalent 8`] = `
{
  "a": {
    "aa": {
      "aaa": "A8",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > pool > equivalent 9`] = `
{
  "a": {
    "aa": {
      "aaa": "A9",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > pool > equivalent 10`] = `
{
  "a": {
    "aa": {
      "aaa": "A10",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > ring > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A1",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > ring > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "A2",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > ring > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": "A3",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > ring > equivalent 4`] = `
{
  "a": {
    "aa": {
      "aaa": "A4",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > ring > equivalent 5`] = `
{
  "a": {
    "aa": {
      "aaa": "A5",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > ring > equivalent 6`] = `
{
  "a": {
    "aa": {
      "aaa": "A6",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > ring > equivalent 7`] = `
{
  "a": {
    "aa": {
      "aaa": "A7",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > ring > equivalent 8`] = `
{
  "a": {
    "aa": {
      "aaa": "A8",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > ring > equivalent 9`] = `
{
  "a": {
    "aa": {
      "aaa": "A9",
    },
  },
}
`;

exports[`file/file/memory connector > 3-depth > 10-way > ring > equivalent 10`] = `
{
  "a": {
    "aa": {
      "aaa": "A10",
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > connected > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > connected > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "B",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > connected, deletion > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > connected, deletion > equivalent 2`] = `{}`;

exports[`file/file/memory connector > 4-depth > 2-way > connected, far atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
  "b": {
    "ba": {
      "baa": {
        "baaa": "B",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > connected, initial > equivalent 1`] = `{}`;

exports[`file/file/memory connector > 4-depth > 2-way > connected, near atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
        "aaab": "B",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > disconnected, conflicting values > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "B",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > disconnected, conflicting values 2 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
        "aaab": "C",
      },
    },
  },
  "b": {
    "ba": {
      "baa": {
        "baaa": "D",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > disconnected, far atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
  "b": {
    "ba": {
      "baa": {
        "baaa": "B",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > disconnected, near atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
        "aaab": "B",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > set 1, set 2, start 2, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "A",
        },
      },
    },
  },
  {},
]
`;

exports[`file/file/memory connector > 4-depth > 2-way > set 1, set 2, start 2, start 1 > differing 2`] = `
[
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "A",
        },
      },
    },
  },
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "B",
        },
      },
    },
  },
]
`;

exports[`file/file/memory connector > 4-depth > 2-way > set 1, set 2, start 2, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "B",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > start 1, set 1, start 2 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "A",
        },
      },
    },
  },
  {},
]
`;

exports[`file/file/memory connector > 4-depth > 2-way > start 1, set 1, start 2 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > start 2, set 1, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "A",
        },
      },
    },
  },
  {},
]
`;

exports[`file/file/memory connector > 4-depth > 2-way > start 2, set 1, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > stop 1, set 1, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "B",
        },
      },
    },
  },
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "A",
        },
      },
    },
  },
]
`;

exports[`file/file/memory connector > 4-depth > 2-way > stop 1, set 1, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > stop 1, set 1, start 1 > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "B",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > stop 1, set 2, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "A",
        },
      },
    },
  },
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "B",
        },
      },
    },
  },
]
`;

exports[`file/file/memory connector > 4-depth > 2-way > stop 1, set 2, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 2-way > stop 1, set 2, start 1 > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "B",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 3-way > chain > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A1",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 3-way > chain > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A2",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 3-way > chain > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A3",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 3-way > pool > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A1",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 3-way > pool > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A2",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 3-way > pool > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A3",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 3-way > ring > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A1",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 3-way > ring > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A2",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 3-way > ring > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A3",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > chain > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A1",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > chain > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A2",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > chain > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A3",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > chain > equivalent 4`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A4",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > chain > equivalent 5`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A5",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > chain > equivalent 6`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A6",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > chain > equivalent 7`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A7",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > chain > equivalent 8`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A8",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > chain > equivalent 9`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A9",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > chain > equivalent 10`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A10",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > pool > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A1",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > pool > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A2",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > pool > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A3",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > pool > equivalent 4`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A4",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > pool > equivalent 5`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A5",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > pool > equivalent 6`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A6",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > pool > equivalent 7`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A7",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > pool > equivalent 8`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A8",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > pool > equivalent 9`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A9",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > pool > equivalent 10`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A10",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > ring > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A1",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > ring > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A2",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > ring > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A3",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > ring > equivalent 4`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A4",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > ring > equivalent 5`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A5",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > ring > equivalent 6`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A6",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > ring > equivalent 7`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A7",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > ring > equivalent 8`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A8",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > ring > equivalent 9`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A9",
      },
    },
  },
}
`;

exports[`file/file/memory connector > 4-depth > 10-way > ring > equivalent 10`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A10",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > connected > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > connected > equivalent 2`] = `
{
  "a": "B",
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > connected, deletion > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > connected, deletion > equivalent 2`] = `{}`;

exports[`file/file/ws connector > 1-depth > 2-way > connected, initial > equivalent 1`] = `{}`;

exports[`file/file/ws connector > 1-depth > 2-way > connected, near atom > equivalent 1`] = `
{
  "a": "A",
  "b": "B",
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > disconnected, conflicting values > equivalent 1`] = `
{
  "a": "B",
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > disconnected, near atom > equivalent 1`] = `
{
  "a": "A",
  "b": "B",
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > set 1, set 2, start 2, start 1 > differing 1`] = `
[
  {
    "a": "A",
  },
  {},
]
`;

exports[`file/file/ws connector > 1-depth > 2-way > set 1, set 2, start 2, start 1 > differing 2`] = `
[
  {
    "a": "A",
  },
  {
    "a": "B",
  },
]
`;

exports[`file/file/ws connector > 1-depth > 2-way > set 1, set 2, start 2, start 1 > equivalent 1`] = `
{
  "a": "B",
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > start 1, set 1, start 2 > differing 1`] = `
[
  {
    "a": "A",
  },
  {},
]
`;

exports[`file/file/ws connector > 1-depth > 2-way > start 1, set 1, start 2 > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > start 2, set 1, start 1 > differing 1`] = `
[
  {
    "a": "A",
  },
  {},
]
`;

exports[`file/file/ws connector > 1-depth > 2-way > start 2, set 1, start 1 > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > stop 1, set 1, start 1 > differing 1`] = `
[
  {
    "a": "B",
  },
  {
    "a": "A",
  },
]
`;

exports[`file/file/ws connector > 1-depth > 2-way > stop 1, set 1, start 1 > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > stop 1, set 1, start 1 > equivalent 2`] = `
{
  "a": "B",
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > stop 1, set 2, start 1 > differing 1`] = `
[
  {
    "a": "A",
  },
  {
    "a": "B",
  },
]
`;

exports[`file/file/ws connector > 1-depth > 2-way > stop 1, set 2, start 1 > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`file/file/ws connector > 1-depth > 2-way > stop 1, set 2, start 1 > equivalent 2`] = `
{
  "a": "B",
}
`;

exports[`file/file/ws connector > 1-depth > 3-way > chain > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`file/file/ws connector > 1-depth > 3-way > chain > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`file/file/ws connector > 1-depth > 3-way > chain > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`file/file/ws connector > 1-depth > 3-way > pool > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`file/file/ws connector > 1-depth > 3-way > pool > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`file/file/ws connector > 1-depth > 3-way > pool > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`file/file/ws connector > 1-depth > 3-way > ring > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`file/file/ws connector > 1-depth > 3-way > ring > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`file/file/ws connector > 1-depth > 3-way > ring > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > chain > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > chain > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > chain > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > chain > equivalent 4`] = `
{
  "a": "A4",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > chain > equivalent 5`] = `
{
  "a": "A5",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > chain > equivalent 6`] = `
{
  "a": "A6",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > chain > equivalent 7`] = `
{
  "a": "A7",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > chain > equivalent 8`] = `
{
  "a": "A8",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > chain > equivalent 9`] = `
{
  "a": "A9",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > chain > equivalent 10`] = `
{
  "a": "A10",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > pool > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > pool > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > pool > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > pool > equivalent 4`] = `
{
  "a": "A4",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > pool > equivalent 5`] = `
{
  "a": "A5",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > pool > equivalent 6`] = `
{
  "a": "A6",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > pool > equivalent 7`] = `
{
  "a": "A7",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > pool > equivalent 8`] = `
{
  "a": "A8",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > pool > equivalent 9`] = `
{
  "a": "A9",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > pool > equivalent 10`] = `
{
  "a": "A10",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > ring > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > ring > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > ring > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > ring > equivalent 4`] = `
{
  "a": "A4",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > ring > equivalent 5`] = `
{
  "a": "A5",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > ring > equivalent 6`] = `
{
  "a": "A6",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > ring > equivalent 7`] = `
{
  "a": "A7",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > ring > equivalent 8`] = `
{
  "a": "A8",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > ring > equivalent 9`] = `
{
  "a": "A9",
}
`;

exports[`file/file/ws connector > 1-depth > 10-way > ring > equivalent 10`] = `
{
  "a": "A10",
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > connected > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > connected > equivalent 2`] = `
{
  "a": {
    "aa": "B",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > connected, deletion > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > connected, deletion > equivalent 2`] = `{}`;

exports[`file/file/ws connector > 2-depth > 2-way > connected, far atom > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
  "b": {
    "ba": "B",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > connected, initial > equivalent 1`] = `{}`;

exports[`file/file/ws connector > 2-depth > 2-way > connected, near atom > equivalent 1`] = `
{
  "a": {
    "aa": "A",
    "ab": "B",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > disconnected, conflicting values > equivalent 1`] = `
{
  "a": {
    "aa": "B",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > disconnected, conflicting values 2 > equivalent 1`] = `
{
  "a": {
    "aa": "A",
    "ab": "C",
  },
  "b": {
    "ba": "D",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > disconnected, far atom > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
  "b": {
    "ba": "B",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > disconnected, near atom > equivalent 1`] = `
{
  "a": {
    "aa": "A",
    "ab": "B",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > set 1, set 2, start 2, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": "A",
    },
  },
  {},
]
`;

exports[`file/file/ws connector > 2-depth > 2-way > set 1, set 2, start 2, start 1 > differing 2`] = `
[
  {
    "a": {
      "aa": "A",
    },
  },
  {
    "a": {
      "aa": "B",
    },
  },
]
`;

exports[`file/file/ws connector > 2-depth > 2-way > set 1, set 2, start 2, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": "B",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > start 1, set 1, start 2 > differing 1`] = `
[
  {
    "a": {
      "aa": "A",
    },
  },
  {},
]
`;

exports[`file/file/ws connector > 2-depth > 2-way > start 1, set 1, start 2 > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > start 2, set 1, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": "A",
    },
  },
  {},
]
`;

exports[`file/file/ws connector > 2-depth > 2-way > start 2, set 1, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > stop 1, set 1, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": "B",
    },
  },
  {
    "a": {
      "aa": "A",
    },
  },
]
`;

exports[`file/file/ws connector > 2-depth > 2-way > stop 1, set 1, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > stop 1, set 1, start 1 > equivalent 2`] = `
{
  "a": {
    "aa": "B",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > stop 1, set 2, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": "A",
    },
  },
  {
    "a": {
      "aa": "B",
    },
  },
]
`;

exports[`file/file/ws connector > 2-depth > 2-way > stop 1, set 2, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": "A",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 2-way > stop 1, set 2, start 1 > equivalent 2`] = `
{
  "a": {
    "aa": "B",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 3-way > chain > equivalent 1`] = `
{
  "a": {
    "aa": "A1",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 3-way > chain > equivalent 2`] = `
{
  "a": {
    "aa": "A2",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 3-way > chain > equivalent 3`] = `
{
  "a": {
    "aa": "A3",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 3-way > pool > equivalent 1`] = `
{
  "a": {
    "aa": "A1",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 3-way > pool > equivalent 2`] = `
{
  "a": {
    "aa": "A2",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 3-way > pool > equivalent 3`] = `
{
  "a": {
    "aa": "A3",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 3-way > ring > equivalent 1`] = `
{
  "a": {
    "aa": "A1",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 3-way > ring > equivalent 2`] = `
{
  "a": {
    "aa": "A2",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 3-way > ring > equivalent 3`] = `
{
  "a": {
    "aa": "A3",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > chain > equivalent 1`] = `
{
  "a": {
    "aa": "A1",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > chain > equivalent 2`] = `
{
  "a": {
    "aa": "A2",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > chain > equivalent 3`] = `
{
  "a": {
    "aa": "A3",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > chain > equivalent 4`] = `
{
  "a": {
    "aa": "A4",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > chain > equivalent 5`] = `
{
  "a": {
    "aa": "A5",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > chain > equivalent 6`] = `
{
  "a": {
    "aa": "A6",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > chain > equivalent 7`] = `
{
  "a": {
    "aa": "A7",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > chain > equivalent 8`] = `
{
  "a": {
    "aa": "A8",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > chain > equivalent 9`] = `
{
  "a": {
    "aa": "A9",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > chain > equivalent 10`] = `
{
  "a": {
    "aa": "A10",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > pool > equivalent 1`] = `
{
  "a": {
    "aa": "A1",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > pool > equivalent 2`] = `
{
  "a": {
    "aa": "A2",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > pool > equivalent 3`] = `
{
  "a": {
    "aa": "A3",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > pool > equivalent 4`] = `
{
  "a": {
    "aa": "A4",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > pool > equivalent 5`] = `
{
  "a": {
    "aa": "A5",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > pool > equivalent 6`] = `
{
  "a": {
    "aa": "A6",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > pool > equivalent 7`] = `
{
  "a": {
    "aa": "A7",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > pool > equivalent 8`] = `
{
  "a": {
    "aa": "A8",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > pool > equivalent 9`] = `
{
  "a": {
    "aa": "A9",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > pool > equivalent 10`] = `
{
  "a": {
    "aa": "A10",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > ring > equivalent 1`] = `
{
  "a": {
    "aa": "A1",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > ring > equivalent 2`] = `
{
  "a": {
    "aa": "A2",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > ring > equivalent 3`] = `
{
  "a": {
    "aa": "A3",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > ring > equivalent 4`] = `
{
  "a": {
    "aa": "A4",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > ring > equivalent 5`] = `
{
  "a": {
    "aa": "A5",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > ring > equivalent 6`] = `
{
  "a": {
    "aa": "A6",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > ring > equivalent 7`] = `
{
  "a": {
    "aa": "A7",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > ring > equivalent 8`] = `
{
  "a": {
    "aa": "A8",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > ring > equivalent 9`] = `
{
  "a": {
    "aa": "A9",
  },
}
`;

exports[`file/file/ws connector > 2-depth > 10-way > ring > equivalent 10`] = `
{
  "a": {
    "aa": "A10",
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > connected > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > connected > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "B",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > connected, deletion > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > connected, deletion > equivalent 2`] = `{}`;

exports[`file/file/ws connector > 3-depth > 2-way > connected, far atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
  "b": {
    "ba": {
      "baa": "B",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > connected, initial > equivalent 1`] = `{}`;

exports[`file/file/ws connector > 3-depth > 2-way > connected, near atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
      "aab": "B",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > disconnected, conflicting values > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "B",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > disconnected, conflicting values 2 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
      "aab": "C",
    },
  },
  "b": {
    "ba": {
      "baa": "D",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > disconnected, far atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
  "b": {
    "ba": {
      "baa": "B",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > disconnected, near atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
      "aab": "B",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > set 1, set 2, start 2, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": "A",
      },
    },
  },
  {},
]
`;

exports[`file/file/ws connector > 3-depth > 2-way > set 1, set 2, start 2, start 1 > differing 2`] = `
[
  {
    "a": {
      "aa": {
        "aaa": "A",
      },
    },
  },
  {
    "a": {
      "aa": {
        "aaa": "B",
      },
    },
  },
]
`;

exports[`file/file/ws connector > 3-depth > 2-way > set 1, set 2, start 2, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "B",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > start 1, set 1, start 2 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": "A",
      },
    },
  },
  {},
]
`;

exports[`file/file/ws connector > 3-depth > 2-way > start 1, set 1, start 2 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > start 2, set 1, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": "A",
      },
    },
  },
  {},
]
`;

exports[`file/file/ws connector > 3-depth > 2-way > start 2, set 1, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > stop 1, set 1, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": "B",
      },
    },
  },
  {
    "a": {
      "aa": {
        "aaa": "A",
      },
    },
  },
]
`;

exports[`file/file/ws connector > 3-depth > 2-way > stop 1, set 1, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > stop 1, set 1, start 1 > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "B",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > stop 1, set 2, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": "A",
      },
    },
  },
  {
    "a": {
      "aa": {
        "aaa": "B",
      },
    },
  },
]
`;

exports[`file/file/ws connector > 3-depth > 2-way > stop 1, set 2, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 2-way > stop 1, set 2, start 1 > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "B",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 3-way > chain > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A1",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 3-way > chain > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "A2",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 3-way > chain > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": "A3",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 3-way > pool > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A1",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 3-way > pool > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "A2",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 3-way > pool > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": "A3",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 3-way > ring > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A1",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 3-way > ring > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "A2",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 3-way > ring > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": "A3",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > chain > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A1",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > chain > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "A2",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > chain > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": "A3",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > chain > equivalent 4`] = `
{
  "a": {
    "aa": {
      "aaa": "A4",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > chain > equivalent 5`] = `
{
  "a": {
    "aa": {
      "aaa": "A5",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > chain > equivalent 6`] = `
{
  "a": {
    "aa": {
      "aaa": "A6",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > chain > equivalent 7`] = `
{
  "a": {
    "aa": {
      "aaa": "A7",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > chain > equivalent 8`] = `
{
  "a": {
    "aa": {
      "aaa": "A8",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > chain > equivalent 9`] = `
{
  "a": {
    "aa": {
      "aaa": "A9",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > chain > equivalent 10`] = `
{
  "a": {
    "aa": {
      "aaa": "A10",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > pool > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A1",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > pool > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "A2",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > pool > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": "A3",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > pool > equivalent 4`] = `
{
  "a": {
    "aa": {
      "aaa": "A4",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > pool > equivalent 5`] = `
{
  "a": {
    "aa": {
      "aaa": "A5",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > pool > equivalent 6`] = `
{
  "a": {
    "aa": {
      "aaa": "A6",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > pool > equivalent 7`] = `
{
  "a": {
    "aa": {
      "aaa": "A7",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > pool > equivalent 8`] = `
{
  "a": {
    "aa": {
      "aaa": "A8",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > pool > equivalent 9`] = `
{
  "a": {
    "aa": {
      "aaa": "A9",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > pool > equivalent 10`] = `
{
  "a": {
    "aa": {
      "aaa": "A10",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > ring > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": "A1",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > ring > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": "A2",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > ring > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": "A3",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > ring > equivalent 4`] = `
{
  "a": {
    "aa": {
      "aaa": "A4",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > ring > equivalent 5`] = `
{
  "a": {
    "aa": {
      "aaa": "A5",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > ring > equivalent 6`] = `
{
  "a": {
    "aa": {
      "aaa": "A6",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > ring > equivalent 7`] = `
{
  "a": {
    "aa": {
      "aaa": "A7",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > ring > equivalent 8`] = `
{
  "a": {
    "aa": {
      "aaa": "A8",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > ring > equivalent 9`] = `
{
  "a": {
    "aa": {
      "aaa": "A9",
    },
  },
}
`;

exports[`file/file/ws connector > 3-depth > 10-way > ring > equivalent 10`] = `
{
  "a": {
    "aa": {
      "aaa": "A10",
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > connected > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > connected > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "B",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > connected, deletion > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > connected, deletion > equivalent 2`] = `{}`;

exports[`file/file/ws connector > 4-depth > 2-way > connected, far atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
  "b": {
    "ba": {
      "baa": {
        "baaa": "B",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > connected, initial > equivalent 1`] = `{}`;

exports[`file/file/ws connector > 4-depth > 2-way > connected, near atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
        "aaab": "B",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > disconnected, conflicting values > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "B",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > disconnected, conflicting values 2 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
        "aaab": "C",
      },
    },
  },
  "b": {
    "ba": {
      "baa": {
        "baaa": "D",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > disconnected, far atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
  "b": {
    "ba": {
      "baa": {
        "baaa": "B",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > disconnected, near atom > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
        "aaab": "B",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > set 1, set 2, start 2, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "A",
        },
      },
    },
  },
  {},
]
`;

exports[`file/file/ws connector > 4-depth > 2-way > set 1, set 2, start 2, start 1 > differing 2`] = `
[
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "A",
        },
      },
    },
  },
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "B",
        },
      },
    },
  },
]
`;

exports[`file/file/ws connector > 4-depth > 2-way > set 1, set 2, start 2, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "B",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > start 1, set 1, start 2 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "A",
        },
      },
    },
  },
  {},
]
`;

exports[`file/file/ws connector > 4-depth > 2-way > start 1, set 1, start 2 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > start 2, set 1, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "A",
        },
      },
    },
  },
  {},
]
`;

exports[`file/file/ws connector > 4-depth > 2-way > start 2, set 1, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > stop 1, set 1, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "B",
        },
      },
    },
  },
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "A",
        },
      },
    },
  },
]
`;

exports[`file/file/ws connector > 4-depth > 2-way > stop 1, set 1, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > stop 1, set 1, start 1 > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "B",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > stop 1, set 2, start 1 > differing 1`] = `
[
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "A",
        },
      },
    },
  },
  {
    "a": {
      "aa": {
        "aaa": {
          "aaaa": "B",
        },
      },
    },
  },
]
`;

exports[`file/file/ws connector > 4-depth > 2-way > stop 1, set 2, start 1 > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 2-way > stop 1, set 2, start 1 > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "B",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 3-way > chain > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A1",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 3-way > chain > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A2",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 3-way > chain > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A3",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 3-way > pool > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A1",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 3-way > pool > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A2",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 3-way > pool > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A3",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 3-way > ring > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A1",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 3-way > ring > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A2",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 3-way > ring > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A3",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > chain > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A1",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > chain > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A2",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > chain > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A3",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > chain > equivalent 4`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A4",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > chain > equivalent 5`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A5",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > chain > equivalent 6`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A6",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > chain > equivalent 7`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A7",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > chain > equivalent 8`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A8",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > chain > equivalent 9`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A9",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > chain > equivalent 10`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A10",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > pool > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A1",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > pool > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A2",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > pool > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A3",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > pool > equivalent 4`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A4",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > pool > equivalent 5`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A5",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > pool > equivalent 6`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A6",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > pool > equivalent 7`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A7",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > pool > equivalent 8`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A8",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > pool > equivalent 9`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A9",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > pool > equivalent 10`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A10",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > ring > equivalent 1`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A1",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > ring > equivalent 2`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A2",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > ring > equivalent 3`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A3",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > ring > equivalent 4`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A4",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > ring > equivalent 5`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A5",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > ring > equivalent 6`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A6",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > ring > equivalent 7`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A7",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > ring > equivalent 8`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A8",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > ring > equivalent 9`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A9",
      },
    },
  },
}
`;

exports[`file/file/ws connector > 4-depth > 10-way > ring > equivalent 10`] = `
{
  "a": {
    "aa": {
      "aaa": {
        "aaaa": "A10",
      },
    },
  },
}
`;
